--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -10354,7 +10354,7 @@
 	return "sal{q}\t{%b2, %0|%0, %b2}";
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	return "sal{q}\t%0";
       else
 	return "sal{q}\t{%2, %0|%0, %2}";
@@ -10411,7 +10411,7 @@
 	return "sal{q}\t{%b2, %0|%0, %b2}";
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	return "sal{q}\t%0";
       else
 	return "sal{q}\t{%2, %0|%0, %2}";
@@ -10559,7 +10559,7 @@
 	return "sal{l}\t{%b2, %0|%0, %b2}";
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	return "sal{l}\t%0";
       else
 	return "sal{l}\t{%2, %0|%0, %2}";
@@ -10620,7 +10620,7 @@
 	return "sal{l}\t{%b2, %k0|%k0, %b2}";
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	return "sal{l}\t%k0";
       else
 	return "sal{l}\t{%2, %k0|%k0, %2}";
@@ -10677,7 +10677,7 @@
 	return "sal{l}\t{%b2, %0|%0, %b2}";
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	return "sal{l}\t%0";
       else
 	return "sal{l}\t{%2, %0|%0, %2}";
@@ -10716,7 +10716,7 @@
 	return "sal{l}\t{%b2, %k0|%k0, %b2}";
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	return "sal{l}\t%k0";
       else
 	return "sal{l}\t{%2, %k0|%k0, %2}";
@@ -10761,7 +10761,7 @@
 	return "sal{w}\t{%b2, %0|%0, %b2}";
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	return "sal{w}\t%0";
       else
 	return "sal{w}\t{%2, %0|%0, %2}";
@@ -10799,7 +10799,7 @@
 	return "sal{w}\t{%b2, %0|%0, %b2}";
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	return "sal{w}\t%0";
       else
 	return "sal{w}\t{%2, %0|%0, %2}";
@@ -10841,7 +10841,7 @@
 	return "sal{w}\t{%b2, %0|%0, %b2}";
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	return "sal{w}\t%0";
       else
 	return "sal{w}\t{%2, %0|%0, %2}";
@@ -10897,7 +10897,7 @@
 	}
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	{
 	  if (get_attr_mode (insn) == MODE_SI)
 	    return "sal{l}\t%0";
@@ -10953,7 +10953,7 @@
 	}
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	{
 	  if (get_attr_mode (insn) == MODE_SI)
 	    return "sal{l}\t%0";
@@ -11005,7 +11005,7 @@
 	return "sal{b}\t{%b2, %0|%0, %b2}";
       else if (GET_CODE (operands[2]) == CONST_INT
 	       && INTVAL (operands[2]) == 1
-	       && (TARGET_PENTIUM || TARGET_PENTIUMPRO))
+	       && (TARGET_SHIFT1 || optimize_size))
 	return "sal{b}\t%0";
       else
 	return "sal{b}\t{%2, %0|%0, %2}";
@@ -11061,7 +11061,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && ix86_binary_operator_ok (ASHIFTRT, DImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "sar{q}\t%0"
   [(set_attr "type" "ishift")
    (set (attr "length") 
@@ -11093,7 +11093,7 @@
    (set (match_operand:DI 0 "nonimmediate_operand" "=rm")
 	(ashiftrt:DI (match_dup 1) (match_dup 2)))]
   "TARGET_64BIT && ix86_match_ccmode (insn, CCGOCmode)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)
+   && (TARGET_SHIFT1 || optimize_size)
    && ix86_binary_operator_ok (ASHIFTRT, DImode, operands)"
   "sar{q}\t%0"
   [(set_attr "type" "ishift")
@@ -11250,7 +11250,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (ASHIFTRT, SImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "sar{l}\t%0"
   [(set_attr "type" "ishift")
    (set (attr "length") 
@@ -11264,7 +11264,7 @@
 				     (match_operand:QI 2 "const_int_1_operand" ""))))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && ix86_binary_operator_ok (ASHIFTRT, SImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "sar{l}\t%k0"
   [(set_attr "type" "ishift")
    (set_attr "length" "2")])
@@ -11305,7 +11305,7 @@
    (set (match_operand:SI 0 "nonimmediate_operand" "=rm")
 	(ashiftrt:SI (match_dup 1) (match_dup 2)))]
   "ix86_match_ccmode (insn, CCGOCmode)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)
+   && (TARGET_SHIFT1 || optimize_size)
    && ix86_binary_operator_ok (ASHIFTRT, SImode, operands)"
   "sar{l}\t%0"
   [(set_attr "type" "ishift")
@@ -11323,7 +11323,7 @@
    (set (match_operand:DI 0 "register_operand" "=r")
 	(zero_extend:DI (ashiftrt:SI (match_dup 1) (match_dup 2))))]
   "TARGET_64BIT && ix86_match_ccmode (insn, CCmode)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)
+   && (TARGET_SHIFT1 || optimize_size)
    && ix86_binary_operator_ok (ASHIFTRT, SImode, operands)"
   "sar{l}\t%k0"
   [(set_attr "type" "ishift")
@@ -11374,7 +11374,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (ASHIFTRT, HImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "sar{w}\t%0"
   [(set_attr "type" "ishift")
    (set (attr "length") 
@@ -11406,7 +11406,7 @@
    (set (match_operand:HI 0 "nonimmediate_operand" "=rm")
 	(ashiftrt:HI (match_dup 1) (match_dup 2)))]
   "ix86_match_ccmode (insn, CCGOCmode)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)
+   && (TARGET_SHIFT1 || optimize_size)
    && ix86_binary_operator_ok (ASHIFTRT, HImode, operands)"
   "sar{w}\t%0"
   [(set_attr "type" "ishift")
@@ -11446,7 +11446,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (ASHIFTRT, QImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "sar{b}\t%0"
   [(set_attr "type" "ishift")
    (set (attr "length") 
@@ -11461,7 +11461,7 @@
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (ASHIFTRT, QImode, operands)
    && (! TARGET_PARTIAL_REG_STALL || optimize_size)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "sar{b}\t%0"
   [(set_attr "type" "ishift")
    (set (attr "length") 
@@ -11506,7 +11506,7 @@
    (set (match_operand:QI 0 "nonimmediate_operand" "=qm")
 	(ashiftrt:QI (match_dup 1) (match_dup 2)))]
   "ix86_match_ccmode (insn, CCGOCmode)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)
+   && (TARGET_SHIFT1 || optimize_size)
    && ix86_binary_operator_ok (ASHIFTRT, QImode, operands)"
   "sar{b}\t%0"
   [(set_attr "type" "ishift")
@@ -11558,7 +11558,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && ix86_binary_operator_ok (LSHIFTRT, HImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "shr{q}\t%0"
   [(set_attr "type" "ishift")
    (set (attr "length") 
@@ -11590,7 +11590,7 @@
    (set (match_operand:DI 0 "nonimmediate_operand" "=rm")
 	(lshiftrt:DI (match_dup 1) (match_dup 2)))]
   "TARGET_64BIT && ix86_match_ccmode (insn, CCGOCmode)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)
+   && (TARGET_SHIFT1 || optimize_size)
    && ix86_binary_operator_ok (LSHIFTRT, HImode, operands)"
   "shr{q}\t%0"
   [(set_attr "type" "ishift")
@@ -11668,7 +11668,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (LSHIFTRT, HImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "shr{l}\t%0"
   [(set_attr "type" "ishift")
    (set (attr "length") 
@@ -11682,7 +11682,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && ix86_binary_operator_ok (LSHIFTRT, HImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "shr{l}\t%k0"
   [(set_attr "type" "ishift")
    (set_attr "length" "2")])
@@ -11724,7 +11724,7 @@
    (set (match_operand:SI 0 "nonimmediate_operand" "=rm")
 	(lshiftrt:SI (match_dup 1) (match_dup 2)))]
   "ix86_match_ccmode (insn, CCGOCmode)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)
+   && (TARGET_SHIFT1 || optimize_size)
    && ix86_binary_operator_ok (LSHIFTRT, HImode, operands)"
   "shr{l}\t%0"
   [(set_attr "type" "ishift")
@@ -11742,7 +11742,7 @@
    (set (match_operand:DI 0 "register_operand" "=r")
 	(lshiftrt:DI (zero_extend:DI (match_dup 1)) (match_dup 2)))]
   "TARGET_64BIT && ix86_match_ccmode (insn, CCGOCmode)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)
+   && (TARGET_SHIFT1 || optimize_size)
    && ix86_binary_operator_ok (LSHIFTRT, HImode, operands)"
   "shr{l}\t%k0"
   [(set_attr "type" "ishift")
@@ -11793,7 +11793,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (LSHIFTRT, HImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "shr{w}\t%0"
   [(set_attr "type" "ishift")
    (set (attr "length") 
@@ -11825,7 +11825,7 @@
    (set (match_operand:HI 0 "nonimmediate_operand" "=rm")
 	(lshiftrt:HI (match_dup 1) (match_dup 2)))]
   "ix86_match_ccmode (insn, CCGOCmode)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)
+   && (TARGET_SHIFT1 || optimize_size)
    && ix86_binary_operator_ok (LSHIFTRT, HImode, operands)"
   "shr{w}\t%0"
   [(set_attr "type" "ishift")
@@ -11865,7 +11865,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (LSHIFTRT, QImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "shr{b}\t%0"
   [(set_attr "type" "ishift")
    (set (attr "length") 
@@ -11880,7 +11880,7 @@
    (clobber (reg:CC 17))]
   "(! TARGET_PARTIAL_REG_STALL || optimize_size)
    && ix86_binary_operator_ok (LSHIFTRT, QImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "shr{b}\t%0"
   [(set_attr "type" "ishift")
    (set (attr "length") 
@@ -11925,7 +11925,7 @@
    (set (match_operand:QI 0 "nonimmediate_operand" "=qm")
 	(lshiftrt:QI (match_dup 1) (match_dup 2)))]
   "ix86_match_ccmode (insn, CCGOCmode)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)
+   && (TARGET_SHIFT1 || optimize_size)
    && ix86_binary_operator_ok (LSHIFTRT, QImode, operands)"
   "shr{b}\t%0"
   [(set_attr "type" "ishift")
@@ -11967,7 +11967,7 @@
 		   (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && ix86_binary_operator_ok (ROTATE, DImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "rol{q}\t%0"
   [(set_attr "type" "rotate")
    (set (attr "length") 
@@ -12001,7 +12001,7 @@
 		   (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (ROTATE, SImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "rol{l}\t%0"
   [(set_attr "type" "rotate")
    (set (attr "length") 
@@ -12016,7 +12016,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" ""))))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && ix86_binary_operator_ok (ROTATE, SImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "rol{l}\t%k0"
   [(set_attr "type" "rotate")
    (set_attr "length" "2")])
@@ -12060,7 +12060,7 @@
 		   (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (ROTATE, HImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "rol{w}\t%0"
   [(set_attr "type" "rotate")
    (set (attr "length") 
@@ -12095,7 +12095,7 @@
    (clobber (reg:CC 17))]
   "(! TARGET_PARTIAL_REG_STALL || optimize_size)
    && ix86_binary_operator_ok (ROTATE, QImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "rol{b}\t%0"
   [(set_attr "type" "rotate")
    (set (attr "length") 
@@ -12109,7 +12109,7 @@
 		   (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (ROTATE, QImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "rol{b}\t%0"
   [(set_attr "type" "rotate")
    (set (attr "length") 
@@ -12156,7 +12156,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && ix86_binary_operator_ok (ROTATERT, DImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "ror{q}\t%0"
   [(set_attr "type" "rotate")
    (set (attr "length") 
@@ -12190,7 +12190,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (ROTATERT, SImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "ror{l}\t%0"
   [(set_attr "type" "rotate")
    (set (attr "length") 
@@ -12205,7 +12205,7 @@
 		       (match_operand:QI 2 "const_int_1_operand" ""))))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && ix86_binary_operator_ok (ROTATERT, SImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "ror{l}\t%k0"
   [(set_attr "type" "rotate")
    (set (attr "length") 
@@ -12252,7 +12252,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (ROTATERT, HImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "ror{w}\t%0"
   [(set_attr "type" "rotate")
    (set (attr "length") 
@@ -12286,7 +12286,7 @@
 		     (match_operand:QI 2 "const_int_1_operand" "")))
    (clobber (reg:CC 17))]
   "ix86_binary_operator_ok (ROTATERT, QImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "ror{b}\t%0"
   [(set_attr "type" "rotate")
    (set (attr "length") 
@@ -12301,7 +12301,7 @@
    (clobber (reg:CC 17))]
   "(! TARGET_PARTIAL_REG_STALL || optimize_size)
    && ix86_binary_operator_ok (ROTATERT, QImode, operands)
-   && (TARGET_PENTIUM || TARGET_PENTIUMPRO)"
+   && (TARGET_SHIFT1 || optimize_size)"
   "ror{b}\t%0"
   [(set_attr "type" "rotate")
    (set (attr "length") 
