* g++.dg/template/typename2.C: Update error message.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54553 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-12  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	* g++.dg/template/typename2.C: Update error message.
+
 2002-06-12  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gcc.c-torture/execute/20020611-1.c: New test.
