* java/io/natFilePosix.cc (getCanonicalPath): Treat "" like ".". 	Fixes PR libgcj/6652.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54558 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-12  Tom Tromey  <tromey@redhat.com>
+
+	* java/io/natFilePosix.cc (getCanonicalPath): Treat "" like ".".
+	Fixes PR libgcj/6652.
+
 2002-06-10  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/Class.h (Class::desiredAssertionStatus): Declare.
