--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-12  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* config/vax/vax.h (MASK_UNIX_ASM, MASK_VAXC_ALIGNMENT)
+	(MASK_G_FLOAT): Define. 
+	(TARGET_UNIX_ASM, TARGET_VAXC_ALIGNMENT, TARGET_G_FLOAT): Use them.
+	(TARGET_SWITCHES): Likewise.
+	(TARGET_DEFAULT): Likewise.
+
 2002-06-12  Daniel Jacobowitz  <drow@mvista.com>
 
 	* config/mips/elf.h (DWARF2_DEBUG_INFO): Define.
