--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-13  Hans-Peter Nilsson  <hp@axis.com>
+
+	PR target/6997
+	* config/cris/cris.md ("sleu"): Set attribute "cc" to "none".
+
 2002-06-12  Daniel Jacobowitz  <drow@mvista.com>
 
 	* config/mips/elf.h (DWARF2_DEBUG_INFO): Define.
