mpw-config.in: Remove file, no longer used.
        * mpw-config.in: Remove file, no longer used.
        * mpw-make.sed: Ditto.

From-SVN: r54572

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-12  Stan Shebs  <shebs@apple.com>
+
+	* mpw-config.in: Remove file, no longer used.
+	* mpw-make.sed: Ditto.
+
 2002-06-07  Zack Weinberg  <zack@codesourcery.com>
 
 	* decl2.c: Update call to cpp_handle_option.
