--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-13  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/mips/r3900.h (MIPS_CPU_STRING_DEFAULT): Make lower case.
+
 2002-06-13  David S. Miller  <davem@redhat.com>
 
 	* expmed.c (init_expmed): Remove duplicate init of 'reg'.
