* i386.c (ix86_expand_movstr):  Fix pasto.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54590 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,8 @@
-Thu Jun 13 18:18:17 CEST 2002  Jan Hubicka   <jh@suse.cz>
+Thu Jun 13 18:24:17 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.c (ix86_expand_movstr):  Fix pasto.
+
+Thu Jun 13 18:18:17 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* reload.c (find_valid_class):  Fix thinko in my previous patch.
 
