* lib/libjava.exp (test_libjava): Fixed typo. 	* libjava.compile/PR6865.xfail: New file.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54594 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-12  Tom Tromey  <tromey@redhat.com>
+
+	* lib/libjava.exp (test_libjava): Fixed typo.
+	* libjava.compile/PR6865.xfail: New file.
+
 2002-06-11  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.compile/PR6865.java: New file.  For PR java/6865.
