--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,21 @@
+2002-06-13  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* cpphash.h (_cpp_lex_identifier_trad): Remove.
+	* cpplib.c (end_directive): Don't skip, always remove overlay
+	apart from #define.
+	(prepare_directive_trad): Handle NULL pfile->directive.
+	(_cpp_handle_directive): Always call prepare_directive_trad
+	if traditional.
+	* cppmain.c (check_multiline_token): Rename account_for_newlines,
+	generalize inputs.
+	(scan_translation_unit_trad): Use it.
+	* cpptrad.c (skip_comment): Rename copy_comment, copy comment to
+	output, get escaped newline in comment close correct.
+	(check_output_buffer, skip_whitespace): Update.
+	(_cpp_lex_identifier_trad): Remove.
+	(scan_out_logical_line): Handle -C and comments in directives
+	properly.
+
 Thu Jun 13 20:18:38 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* config.gcc: Add support for sh[234]*-*-elf*, sh[2346lbe]*-*-linux*.
